--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,72 @@
     line-height: 29px;
     max-width: 360px;
 }
+
+
+/* services */
+
+.services {
+    margin-bottom: 110px;
+}
+
+.services__title {
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 50px;
+    text-transform: uppercase;
+    color: #00559D;
+    text-align: center;
+    margin: 80px 0 50px;
+}
+
+.services__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -10px;
+}
+
+.services__item {
+    max-width: 280px;
+    margin: 10px;
+}
+
+.services__heading {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 36px;
+    color: #2C3036;
+    margin: 19px 0 20px;
+    width: 75%;
+}
+
+/* ABOUT */
+
+.about {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-bottom: 80px;
+}
+
+.about__wrapper {
+    width: 40%;
+}
+
+.about__title {
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 100%;
+    color: #005DAB;
+    margin: 0 0 46px;
+}
+
+/* AWARDS */
+
+.awards {
+    margin-bottom: 80px;
+}
+
+.awards__list {
+    display: flex;
+    justify-content: space-between;
+}
