--- a/css/style.css
+++ b/css/style.css
@@ -51,10 +51,10 @@
     max-width: 280px;
     margin: 10px;
 }
-
+/* 
 .services__item:first-child {
     background: #000;
-}
+} */
 
 .services__heading {
     font-weight: bold;
