--- a/css/common.css
+++ b/css/common.css
@@ -283,10 +283,20 @@ input[type="radio"] {
     right: 0;
     bottom: 0;
     z-index: 2;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     display: none;
+}
+
+.modal_open {
+    display: flex;
+}
+
+.modal__close {
+    background: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 .modal__form {
@@ -294,6 +304,7 @@ input[type="radio"] {
     left: 360px;
     top: 167px;
     background: #EEEEEE;
+    padding: 50px;
     /* position: absolute; */
     /* top: 50%; */
     /* left: 50%; */
